fix author tab on gallery modal being cut off on mobile

--- a/resources/css/webapp.css
+++ b/resources/css/webapp.css
@@ -780,6 +780,7 @@ code {
 .double-table {
 	display: flex;
 	flex-direction: row;
+	flex-wrap: wrap;
 	gap: 30px;
 }
 
